multilayer + appendix_multilayer

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,31 +1,32 @@
 \begin{appendix}
-%\include{anhanga}
-%\newpage
-%\addcontentsline{toc}{chapter}{B. Danksagung}
-%% \thispagestyle{empty}
-%% \chapter{Danksagung}
-%% \newpage
-%\chapter{}
-\null\vfil
-\begin{center}
-%\vspace{-.5em}\vspace{\parsep}
-%\vspace{0.2cm}
-\vspace{3cm}
-\end{center}
-\par\vfil\null
-%\cleardoubleemptypage
+  \input{appendix_multilayer}
 
-%======================================================================
-%  Selbstständigkeitserklärung
-%======================================================================
+  %\newpage
+  %\addcontentsline{toc}{chapter}{B. Danksagung}
+  %% \thispagestyle{empty}
+  %% \chapter{Danksagung}
+  %% \newpage
+  %\chapter{}
+  \null\vfil
+  \begin{center}
+    %\vspace{-.5em}\vspace{\parsep}
+    %\vspace{0.2cm}
+    \vspace{3cm}
+  \end{center}
+  \par\vfil\null
+  %\cleardoubleemptypage
 
-%\addcontentsline{toc}{chapter}{C. Selbständigkeitserklärung}
-%\chapter{Selbstständigkeitserklärung}
-%\includepdf[pagecommand={}]{selbststaendigkeitserklaerung.pdf}
-%\stepcounter{page}
-%\includepdf{selbststaendigkeitserklaerung.pdf}
-\cleardoublepage
-\includepdf[pagecommand={\thispagestyle{plain}}]{selbststaendigkeitserklaerung.pdf}
+  %======================================================================
+  %  Selbstständigkeitserklärung
+  %======================================================================
+
+  %\addcontentsline{toc}{chapter}{C. Selbständigkeitserklärung}
+  %\chapter{Selbstständigkeitserklärung}
+  %\includepdf[pagecommand={}]{selbststaendigkeitserklaerung.pdf}
+  %\stepcounter{page}
+  %\includepdf{selbststaendigkeitserklaerung.pdf}
+  \cleardoublepage
+  \includepdf[pagecommand={\thispagestyle{plain}}]{selbststaendigkeitserklaerung.pdf}
 
 \end{appendix}
 
@@ -33,4 +34,3 @@
 
 %\include{anhanga}
 
-\end{document}
