--- a/literature.bib
+++ b/literature.bib
@@ -346,6 +346,43 @@
 	year = {2014}
 }
 
+@article{zhou_atomistic_1998,
+	title = {Atomistic simulations of the vapor deposition of Ni/Cu/Ni multilayers: The effects of adatom incident energy},
+	volume = {84},
+	issn = {0021-8979, 1089-7550},
+	shorttitle = {Atomistic simulations of the vapor deposition of Ni/Cu/Ni multilayers},
+	url = {http://scitation.aip.org/content/aip/journal/jap/84/4/10.1063/1.368297},
+	doi = {10.1063/1.368297},
+	abstract = {Vapor depositedmultilayers consisting of a low electrical resistivity conductor sandwiched between ferromagnetic metals such as cobalt or nickel-iron alloys sometimes exhibit giant magnetoresistance({GMR}). The {GMR} properties of these films are a sensitive function of structure and defects in the films and therefore depend upon the processing conditions used for their synthesis. A three-dimensional molecular dynamics method has been developed to simulate the [111] growth of model Ni/Cu/Ni multilayers and was used to investigate the role of vapor atom impact energy upon the film structure and defects. High incident atom energies were found to lower interfacial roughness but promoted intermixing by an atomic exchange mechanism. Low incident energies reduced intermixing, but resulted in films with rough, defective interfaces. The simulations identified an intermediate incident energy between 1 and 2 {eV} that resulted in both low roughness and intermixing, and an anticipated large {GMR} effect. The simulation methodology was extended to explore the benefits of a modulated incident atom energy deposition strategy. When a thermal energy was used to deposit the first few monolayers of each new metal layer, intermixing by the exchange mechanism during subsequent hyperthermal energy deposition could be eliminated, and films with almost no interfacial roughness or intermixing could be grown. The modulated energy deposition method can be simply implemented using ion beam deposition.},
+	number = {4},
+	urldate = {2014-10-16},
+	journal = {Journal of Applied Physics},
+	author = {Zhou, X. W. and Wadley, H. N. G.},
+	month = aug,
+	year = {1998},
+	keywords = {Giant magnetoresistance, Ion beam assisted deposition, Multilayers, Nickel, Thin films},
+	pages = {2301--2315},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UHMNEMC9/Zhou and Wadley - 1998 - Atomistic simulations of the vapor deposition of N.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/RPIIPPVH/1.html:text/html}
+}
+
+@article{cammarata_nanoindentation_1990,
+	title = {Nanoindentation study of the mechanical properties of copper-nickel multilayered thin films},
+	volume = {56},
+	issn = {0003-6951, 1077-3118},
+	url = {http://scitation.aip.org/content/aip/journal/apl/56/19/10.1063/1.103070},
+	doi = {10.1063/1.103070},
+	abstract = {The mechanical properties of multilayered Cu‐Ni thin films with bilayer thicknesses of 1.6–12 nm were investigated by a nanoindentation technique. Force‐displacement curves generated during loading and unloading of a diamond tip indenter were used to determine the hardness and elastic properties of the films. No enhancement in the elastic properties (supermodulus effect) was seen, but an enhancement in the hardness was observed. It is suggested that the enhancement, which displayed a Hall–Petch‐type behavior, can be understood as owing to dislocation pinning at the interfaces analogous to the mechanism of grain boundary hardening.},
+	number = {19},
+	urldate = {2014-10-23},
+	journal = {Applied Physics Letters},
+	author = {Cammarata, R. C. and Schlesinger, T. E. and Kim, C. and Qadri, S. B. and Edelstein, A. S.},
+	month = may,
+	year = {1990},
+	keywords = {Elasticity, Hardness, Mechanical properties, Metallic thin films, Nanotechnology},
+	pages = {1862--1864},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/B8VIKXNR/Cammarata et al. - 1990 - Nanoindentation study of the mechanical properties.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XPMUFSWG/1.html:text/html}
+}
+
 @article{svorcik_annealing_2011,
 	title = {Annealing of sputtered gold nano-structures},
 	volume = {102},
@@ -380,4 +417,22 @@
 	keywords = {Clusters, Computer simulations, Gold, Surface melting},
 	pages = {88--98},
 	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/APM3FJXR/Liu et al. - 2001 - Melting behavior of nanometer sized gold isomers.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/DCVNQG3C/S0039602801013516.html:text/html}
+}
+
+@article{yang_pulsed_1995,
+	title = {Pulsed Electrodeposition of Copper/Nickel Multilayers on a Rotating Disk Electrode I . Galvanostatic Deposition},
+	volume = {142},
+	issn = {0013-4651, 1945-7111},
+	url = {http://jes.ecsdl.org/content/142/9/3034},
+	doi = {10.1149/1.2048681},
+	abstract = {Thin Cu/Ni multilayers were deposited on a rotating disk electrode by square‐wave galvanostatic pulses in one‐third and full strength Watts nickel baths with 50 to 1000 ppm {CuCu}2+. A theoretical model was developed to predict the copper content in the Ni layer. Factors affecting the deposition which include the mass‐transfer rate, copper ion concentration, temperature, and applied current density were studied. The copper content in the Ni layer was analyzed experimentally by x‐ray diffraction and potentiodynamic stripping. Theoretical predictions are in good agreement with experimental results.},
+	number = {9},
+	urldate = {2014-10-23},
+	journal = {Journal of The Electrochemical Society},
+	author = {Yang, Chun-Chen and Cheh, Huk Y.},
+	month = sep,
+	year = {1995},
+	keywords = {Copper, current density, electrodeposition, electrodes, modelling, Multilayers, Nickel, rotation},
+	pages = {3034--3040},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/R5KVHVBP/Yang and Cheh - 1995 - Pulsed Electrodeposition of CopperNickel Multilay.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/E6B23AGE/3034.html:text/html}
 }
