--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -151,11 +151,12 @@ Bei Abscheidungen auf Substrate hoher Neigungswinkel (>\SI{60}{\degree}) bilden 
 Durch Bildung von Überhängen an den Stufen werden die Poren zu Hohlräumen abgeschlossen, die nicht durch Relaxierung geschlossen werden.
 Dies zeigt sich auch in den Oberflächenrauheiten der untersuchten Strukturen (Abbildung \ref{fig:goldroughness}).
 
+\clearpage
 \subsection{Vergleich mit gesputterten Schichten}
 
-AFM-Untersuchungen gesputterter Goldschichten zeigen polykristalline Schichten mit Rauheiten im Bereich von \SI{1.1}{\nano\meter}\cite{svorcik_annealing_2011} (etwa drei fcc-Kristallschichten).
-Dominiert wird das Wachstum dieser Schichten durch die Bildung von Nanopartikeln, deren Schmelztemperaturen von ihrer Größe abhängig ist.
-Diese Schmelztemperaturen nehmen mit der Größe der Partikel zu\cite{liu_melting_2001}, so dass kleinere Goldpartikeln oberhalb ihrer Schmelztemperatur zu größeren Partikeln verschmelzen, wodurch die Rauheit der Goldoberfläche zunimmt.
+AFM-Untersuchungen gesputterter Goldschichten zeigen polykristallines Wachstum mit Rauheiten im Bereich von \SI{1.1}{\nano\meter} (etwa drei fcc-Kristallschichten)\cite{svorcik_annealing_2011}.
+Dabei wird die Oberflächenrauheit von der Bildung von Nanopartikeln dominiert, deren Schmelztemperaturen mit der Größe der Partikel zunehmen\cite{liu_melting_2001}.
+Kleinere Goldpartikeln verschmelzen oberhalb ihrer spezifischen Schmelztemperatur zu größeren Partikeln, wodurch die Rauheit der Goldoberfläche mit höheren Substrat- oder Annealing-Temperaturen zunimmt.
 Bei \todo{Vergleich womit?}vergleichsweise niedrigen Temperaturen, wie sie bei Sputtering vorhanden sind, werden durch Unterbindung der Verschmelzung kleiner Goldpartikel geringere Rauheiten erreicht, die mit längerer Sputterdauer weiter abnehmen\cite{svorcik_annealing_2011}.
 
 In Parsivald-Simulationen ist dieser Trend bisher nur selten zu beobachten, wie etwa bei der \SI{45}{\degree}-Spitze, deren Rauheit gegen Ende der Simulation langsam abnimmt.
@@ -242,7 +243,8 @@ Dazu werden verschiedene quadratische Substrate mit Breiten von \SI{100}{\angstr
 
 \end{threeparttable}\end{table}
 
-Mit \SI{94}{\byte} pro Atom, zusätzlich zum programmbezogenen Speicher von \SI{253}{\mebi\byte}, wird deutlich, dass auch große Simulationsräume mit 2 Milliarden Atomen auf \SI{4x4}{\micro\meter} den verfügbaren Arbeitsspeicher moderner Hochleistungsrechner nicht ausreizen.
+Mit \SI{94}{\byte} pro Atom, zusätzlich zum konstanten Programmspeicher von \SI{253}{\mebi\byte}, können auch extreme Simulationsräume mit 2 Milliarden Atomen auf einer Oberfläche von \SI{4x4}{\micro\meter} vom Arbeitsspeicher moderner Hochleistungsrechner verwaltet werden können.
+
 Anders sieht es bei der notwendigen Rechenleistung aus:
 Während kleine Simulationsräume (\SI{<200}{\angstrom}) nicht wesentlich von der parallelen Rechenleistung profitieren können, scheitern größere Prozesse am Mangel daran:
 Im zweiten Test mit einer \SI{2x2}{\micro\meter} großen Struktur wurde die Grenze der Bandbreite des Hostprozesses erreicht:
