--- a/settings.tex
+++ b/settings.tex
@@ -59,3 +59,4 @@
 \algnewcommand\algorithmicassumption{\textbf{Assumption: }}
 \algnewcommand\Assumption{\item[\algorithmicassumption]}
 
+\DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
