--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -35,7 +35,7 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{CuNi_thicklayers}
     \caption{Profil eines Systemes nach 6 Lagen je \SI{5}{\nano\meter}}
-    \label{fig:multilayer_columnfail}
+    \label{fig:multilayer_thickfail}
   \end{subfigure}
   \hfill
 \end{figure}
@@ -43,5 +43,5 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
 \section{Multilagen mit einer Dicke von \SI{5}{\nano\meter}}
 
 Ergänzend wurden auch Untersuchungen an Schichten mit Lagendicken begonnen, die sich mehr an experimentellen Werten von mehreren Nanometern orientieren.
-Abbildung \ref{fig:multilayer_columnfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für notwendige Optimierungsschritte nicht weiter untersucht wurde.
+Abbildung \ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für notwendige Optimierungsschritte nicht weiter untersucht wurde.
 Aus diesem Grund sind auch Krater- und Porenbildungen zu beobachten, die erwartungsgemäß mit Eingabe der optimalen Werte aus Kapitel \ref{multilayer} eliminiert werden.
